// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.yml - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# @prettier

    123

=====================================output=====================================
# @prettier

123

================================================================================
`;

exports[`without-pragma.yml - {"insertPragma":true} format 1`] = `
====================================options=====================================
insertPragma: true
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================


    123

=====================================output=====================================
# @format

123

================================================================================
`;
